nginx-lb.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-lb
  labels:
    app: nginx-lb
spec:
  containers:
  - name: nginx
    image: nginx:stable
    ports:
    - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-lb-svc
spec:
  type: LoadBalancer
  selector:
    app: nginx-lb
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
